--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -30,5 +30,9 @@ div {
 }
 
 .eos {
-  background-color: red;
+  background-color: rgb(255, 0, 0);
+}
+
+.error {
+  background-color: rgb(255, 0, 0);
 }
